--- a/app/globals.css
+++ b/app/globals.css
@@ -44,4 +44,10 @@ hr {
   gap: 1rem;
 }
 
-
+.loading {
+  color: #000;
+  margin-top: 5rem;
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+}
